// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Text  /> should match snapshot 1`] = `
.c0 .tooltip-content.sirius-tooltip {
  font-variant-numeric: initial;
  text-transform: initial;
  border-radius: 0;
  padding: 0.2857rem 0.7143rem 0.3571rem;
  font-weight: 400;
  border-radius: 0;
  font-size: 12px;
  color: #cdcdcd;
  line-height: 1.1429rem;
  min-width: 40px;
  max-width: 38rem;
}

.c0 a {
  color: #00acff;
}

.c0 a:hover {
  color: #3dc0ff;
}

.c1 .text.sirius-text {
  text-overflow: ellipsis;
  overflow: hidden;
  white-space: nowrap;
  vertical-align: bottom;
  max-width: 40px;
  display: inline-block;
  cursor: pointer;
}

.c1 .text.sirius-text a {
  text-overflow: ellipsis;
  overflow: hidden;
  white-space: nowrap;
  vertical-align: bottom;
  max-width: 40px;
  display: inline-block;
  cursor: pointer;
}

.c1 .text.sirius-text a:hover {
  color: #0626ae;
}

@media (max-width:600px) {
  .c0 .tooltip-content.sirius-tooltip {
    max-width: 24rem;
    white-space: normal;
    word-break: break-all;
  }
}

<span
  class="c0"
>
  <div
    class="jsx-726172838 tooltip-wrapper"
  >
    <div
      class="jsx-726172838 tooltip "
    >
      <span
        class="c1"
      >
        <p
          class="jsx-3390086683  text sirius-text"
        >
          <span>
            1234567890
          </span>
        </p>
      </span>
    </div>
  </div>
</span>
`;

exports[`<Text  /> should match snapshot when set maxCount 1`] = `
.c0 .tooltip-content.sirius-tooltip {
  font-variant-numeric: initial;
  text-transform: initial;
  border-radius: 0;
  padding: 0.2857rem 0.7143rem 0.3571rem;
  font-weight: 400;
  border-radius: 0;
  font-size: 12px;
  color: #cdcdcd;
  line-height: 1.1429rem;
  min-width: 40px;
  max-width: 38rem;
}

.c0 a {
  color: #00acff;
}

.c0 a:hover {
  color: #3dc0ff;
}

.c1 .text.sirius-text {
  text-overflow: ellipsis;
  overflow: hidden;
  white-space: nowrap;
  vertical-align: bottom;
  display: inherit;
  cursor: pointer;
}

.c1 .text.sirius-text a {
  text-overflow: ellipsis;
  overflow: hidden;
  white-space: nowrap;
  vertical-align: bottom;
  display: inherit;
  cursor: pointer;
}

.c1 .text.sirius-text a:hover {
  color: #0626ae;
}

@media (max-width:600px) {
  .c0 .tooltip-content.sirius-tooltip {
    max-width: 24rem;
    white-space: normal;
    word-break: break-all;
  }
}

<span
  class="c0"
>
  <div
    class="jsx-726172838 tooltip-wrapper"
  >
    <div
      class="jsx-726172838 tooltip "
    >
      <span
        class="c1"
      >
        <p
          class="jsx-3390086683  text sirius-text"
        >
          12345...
        </p>
      </span>
    </div>
  </div>
</span>
`;
